Fixed layout for the favorites page to fit on smaller screens

--- a/src/comps/Favorite.scss
+++ b/src/comps/Favorite.scss
@@ -1,5 +1,8 @@
 .favorite__container{
-	margin: 0 21rem 0 21rem;
+	// margin: 0 21rem 0 21rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .Edit {
