--- a/src/comps/Favorite/TitleFav.scss
+++ b/src/comps/Favorite/TitleFav.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px 20px 40px 13rem;
+  margin: 40px;
   width:900px;
   height: 120px;
   background-color: #2d2e30;
